2006-07-13 Sancho Lerena <sancho.lerena@artica.es>

        * estado_grupo.php. Fix bug viewing groups, agent intervar was not read and 
	misused, resulting in a bad result of module down total sum.

        * Some headers changed to show the "official" GPL Header info

	* godmode/setup/setup.php: Fixed small bug showing filelist.

2006-07-12  Raul Mateos  <raulofpandora@gmail.com>

	* datos_agente.php. Add new text about authors. Add a line between table and button. Add different colors between rows (cosmetic changes). Add Help.
	
	* user.php. Add new text about authors. Clean code.
	
	* menu.php. Add highlight when datos_agente selected.

	* pandora.css. Add new text about authors.
	
	* changed name from pandora_info_es.html to pandora_info_es_es.html and pandora_info_bb.html to pandora_info_ast_es.html

	* pandora_info_it.html. New file, GPL license in italian

	* language_it.php. New language file, italian
	
	* pandoradb_data.sql. Change to add that the new language

	* help/it. New directory for help files in italian

2006-07-11  Raul Mateos  <raulofpandora@gmail.com>

	* Moved FreeSans.ttf to the reporting directory
	
	* Modified config.php. Now only shows the font, $config_fontpath var is set without the path (it should look for the font in the reporting directory)

2006-07-11  Sancho Lerena  <slerena@gmail.com>

	* config.php: Replaced default font for use in graphs to use FreeSans.ttf

	* FreeSans.ttf: added to SVN repository.

	* fpgraph.php: Fixed problem with Call-time pass-by-reference in PHP.

	* functions.php: Updated parametro_limpio() security function to parse better. 
	Includes a regular expression to purge %00 expresions.


2006-07-11  Raul Mateos  <raulofpandora@gmail.com>

	* user_edit.php: Add new text about authors. Add a line between table and button. Add different colors between rows (cosmetic changes).
	
	* menu.php: Add new text about authors. Add code to highlight "edit my user" when editing the user authenticated.
